--- a/src/style.css
+++ b/src/style.css
@@ -6,22 +6,22 @@ body {
 
 div {
   background-color: rgb(44, 142, 193);
-  border: rgb(231,84,81) solid 1px;
+  border: 1px solid rgb(231,84,81);
   margin-bottom: 40px;
-
 }
 
-div > div {
+.middle {
   background-color: rgb(255,167,0);
   margin: 10px;
 }
 
-div > div > div {
+.inner {
   background-color: rgb(222,222,222);
   margin: 10px;
   padding: 10px;
 }
 
-.cont {
-  width: 348px;
+.outer {
+  width: 350px;
+  box-sizing: border-box;
 }
